# grinta

./: .cursorrules  .gitignore  .windsurfrules  LICENSE  README.md  biome.json  package-lock.json  package.json  turbo.json
.github/workflows/: build_app.yml  ci.yml  release_app.yml
apps/api/: .env.example  .gitignore  .tsbuildinfo  drizzle.config.ts  package.json  tsconfig.json  tsup.config.ts
apps/api/drizzle/: 0000_blue_centennial.sql  0000_clear_the_captain.sql  0001_fancy_ben_urich.sql  0001_tiresome_nicolaos.sql  0002_spicy_earthquake.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
apps/api/scripts/: notify-deployed.ts
apps/api/src/: const.ts  index.ts
apps/api/src/auth/: index.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/routers/: ai.router.ts  auth.router.ts  data.router.ts  docs.router.ts  realtime.router.ts  users.router.ts
apps/api/src/services/: ai.service.ts
apps/api/src/utils/: DISPOSABLE_EMAIL_DOMAINS.ts  env.utils.ts  mail.utils.ts  rate-limit.utils.ts  router.utils.ts  schema.utils.ts  webhook.utils.ts
apps/app/: .env.example  bun-test-plugins.ts  bunfig.toml  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
apps/app/scripts/: e2e-runner.ts
apps/app/src/: app.css  app.html  d.d.ts
apps/app/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.prod.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: calendar_utils.rs  command.rs  favicon_utils.rs  icns_utils.rs  keyring_utils.rs  lib.rs  lib_update.txt  main.rs  spotlight_utils.rs  state.rs  theme_utils.rs  toggle_visibility.rs  window.rs  workspace_utils.rs
apps/app/src/lib/: auth.ts  env.ts  formula-commands.spec.ts  formula-commands.ts  grinta-invoke.ts  osa.ts  storage.ts  system-theme-watcher.svelte.ts  system.utils.svelte.ts  utils.spec.svelte.ts  utils.spec.ts  utils.svelte.ts
apps/app/src/routes/: +layout.svelte  +page.svelte
apps/app/src/types/: file-icon.d.ts
apps/app/test/: simple.e2e.ts
apps/extension/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/extension/src/: app.svelte  manifest.json  sidebar.css  sidebar.html  sidebar.ts
apps/extension/src/lib/: auth.ts  ax.ts  const.ts  dom.ts  encryption.ts  env.ts  schema.ts  storage.ts  types.ts  utils.svelte.ts
apps/extension/src/pages/: agent.svelte  chats-history.svelte  chats.svelte  home.svelte  profile.svelte  settings.svelte  sign-in.svelte
apps/extension/theme/: manifest.json
apps/website/: astro.config.mjs  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json
apps/website/public/.well-known/: apple-app-site-association
apps/website/src/: env.d.ts  middleware.ts  tailwind.css
apps/website/src/components/: account-button.svelte  account-management.svelte  cta-download.astro  download-grinta.svelte  download-wave.astro  features-grid.astro  features.astro  footer.astro  grinta-preview.astro  grinta-pro.astro  hero.astro  hero.svelte  landing-navbar.astro  one-time-token.svelte  pro.astro  sign-in-form.svelte  stories.svelte  testimonials.astro  theme-select.astro  theme.astro  tiny-theme-switch.svelte  video-modal.svelte
apps/website/src/layouts/: base-layout.astro
apps/website/src/lib/: auth.ts  env.ts
apps/website/src/pages/: 404.astro  account.astro  cancelled.astro  code.astro  index.astro  privacy-policy.mdx  sign-in.astro  success.astro  (+1 more)
(+119 files in other folders)
