[package]
name = "grinta"
version = "0.1.0"
description = "A Tauri App"
authors = ["Grinta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grinta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-icns = "0.1.0"
png = "0.17.10"
base64 = "0.21.5"
rust-argon2 = "2.1.0"
tauri-plugin-deep-link = "2"
zip = "2.3.0"
block = "0.1.6"
block2 = "0.3"
thiserror = "1.0.63"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-macos-permissions = "2.2.0"
plist = "1.7.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
window-vibrancy = "0.6.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-foundation = "0.9"
objc = { version = "0.2.7", features = ["exception"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# Added for Spotlight search async functionality
tokio = { version = "1", features = ["sync"] }

[features]
cargo-clippy = []
